# app/Http/Controllers/API/CategoryAPIController.php
@@ -32,6 +32,46 @@ class CategoryAPIController extends AppBaseController
      * @param Request $request
      * @return Response
      */
+
+    /**
+     * @OA\Get(
+     *     path="/api/categories",
+     *     summary="List all categories",
+     *     tags={"Categories"},
+     *     security={{"sanctum":{}}},
+     *     @OA\Parameter(
+     *         name="name",
+     *         description="",
+     *          in = "query",
+     *         required=false,
+     *         @OA\Schema(
+     *             type="string"
+     *         )
+     *      ),
+     *     @OA\Parameter(
+     *         name="parent_id",
+     *         description="",
+     *          in = "query",
+     *         required=false,
+     *         @OA\Schema(
+     *             type="integer"
+     *         )
+     *      ),
+     *     @OA\Parameter(
+     *         name="status",
+     *         description="",
+     *          in = "query",
+     *         required=false,
+     *         @OA\Schema(
+     *             type="integer"
+     *         )
+     *      ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="retrieved",
+     *     ),
+     * )
+     */
     public function index(Request $request)
     {
         $categories = $this->categoryRepository->all(
@@ -51,6 +91,43 @@ class CategoryAPIController extends AppBaseController
      *
      * @return Response
      */
+    /**
+     * @OA\Post(
+     *     path="/api/categories",
+     *     summary="Create a Category",
+     *     tags={"Categories"},
+     *     security={{"sanctum":{}}},
+     *     @OA\RequestBody(
+     *         @OA\MediaType(
+     *           mediaType="multipart/form-data",
+     *             @OA\Schema(
+     *                 @OA\Property(
+     *                     property="name",
+     *                     type="string"
+     *                 ),
+     *                 @OA\Property(
+     *                     property="image",
+     *                     type="files"
+     *                 ),
+     *                 @OA\Property(
+     *                     property="description",
+     *                     type="string"
+     *                 ),
+     *                 @OA\Property(
+     *                     property="parent_id",
+     *                     type="integer"
+     *                 ),
+     *                 @OA\Property(
+     *                     property="status",
+     *                     type="integer"
+     *                 ),
+     *             )
+     *         )
+     *     ),
+     *     @OA\Response(response="200", description="Post saved successfully"),
+     *     @OA\Response(response="500", description="Internal error")
+     * )
+     */
     public function store(CreateCategoryAPIRequest $request)
     {
         $input = $request->all();
@@ -69,6 +146,25 @@ class CategoryAPIController extends AppBaseController
      * @param int $id
      *
      * @return Response
+     */
+
+    /**
+     * @OA\get(
+     *     path="/api/categories/{id}",
+     *     summary="Get a Category",
+     *     tags={"Categories"},
+     *     security={{"sanctum":{}}},
+     *     @OA\Parameter(
+     *         description="Parameter with mutliple examples",
+     *         in="path",
+     *         name="id",
+     *         required=true,
+     *         @OA\Schema(type="string"),
+     *         @OA\Examples(example="int", value="1", summary="An Id value."),
+     *     ),
+     *     @OA\Response(response="200", description="Post retrieved successfully"),
+     *     @OA\Response(response="500", description="Internal error")
+     * )
      */
     public function show($id)
     {
@@ -90,6 +186,52 @@ class CategoryAPIController extends AppBaseController
      * @param UpdateCategoryAPIRequest $request
      *
      * @return Response
+     */
+
+    /**
+     * @OA\Patch(
+     *     path="/api/categories/{id}",
+     *     summary="Update a Category",
+     *     tags={"Categories"},
+     *     security={{"sanctum":{}}},
+     *     @OA\Parameter(
+     *         description="Update a Category",
+     *         in="path",
+     *         name="id",
+     *         required=true,
+     *         @OA\Schema(type="string"),
+     *         @OA\Examples(example="int", value="1", summary="An Id value."),
+     *     ),
+     *     @OA\RequestBody(
+     *         @OA\MediaType(
+     *             mediaType="multipart/form-data",
+     *             @OA\Schema(
+     *                  @OA\Property(
+     *                      property="name",
+     *                      type="string"
+     *                  ),
+     *                  @OA\Property(
+     *                      property="image",
+     *                      type="files"
+     *                  ),
+     *                  @OA\Property(
+     *                      property="description",
+     *                      type="string"
+     *                  ),
+     *                  @OA\Property(
+     *                      property="parent_id",
+     *                      type="integer"
+     *                  ),
+     *                  @OA\Property(
+     *                      property="status",
+     *                      type="integer"
+     *                  )
+     *             )
+     *         )
+     *     ),
+     *     @OA\Response(response="201", description="Category updated successfully"),
+     *     @OA\Response(response="500", description="Internal error")
+     * )
      */
     public function update($id, UpdateCategoryAPIRequest $request)
     {
@@ -116,6 +258,23 @@ class CategoryAPIController extends AppBaseController
      * @throws \Exception
      *
      * @return Response
+     */
+    /**
+     * @OA\Delete(
+     *     path="/api/categories/{id}",
+     *     summary="Delete a Category",
+     *     tags={"Categories"},
+     *     security={{"sanctum":{}}},
+     *     @OA\Parameter(
+     *         description="Parameter with mutliple examples",
+     *         in="path",
+     *         name="id",
+     *         required=true,
+     *         @OA\Schema(type="string"),
+     *         @OA\Examples(example="int", value="1", summary="An Id value."),
+     *     ),
+     *     @OA\Response(response="200", description="Post deleted successfully")
+     * )
      */
     public function destroy($id)
     {
